--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripe": "stripe listen --forward-to localhost:3000/api/webhooks"
+    "stripe": "stripe listen --forward-to localhost:3000/api/webhooks",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@stripe/stripe-js": "^1.42.0",
     "axios": "^1.1.3",
     "faunadb": "^4.7.0",
     "next": "12.3.1",
     "next-auth": "^4.13.0",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -22,10 +28,13 @@
     "stripe": "^10.13.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.3",
     "@types/node": "^18.8.4",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.21",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "slice-machine-ui": "^0.5.1",
     "typescript": "^4.8.4"
   }
 }
